# LazyTetris

./: .gitignore  CMakeLists.txt  Makefile  README.md  make-run.sh
src/: constants.h  lazy.cpp  lazy_no_animation.cpp  main.cpp  not_lazy.cpp  particle_swarm.cpp  solver.cpp  solver.h  tetris.cpp  tetris.h  util.cpp  util.h
src/solver-playground/: main.cpp
test/: solver_test.cpp
